Fixed login on mobile size

--- a/styles/login.less
+++ b/styles/login.less
@@ -1,7 +1,7 @@
 .login {
   // margin: 5vw;
   box-sizing: border-box;
-  // padding: 3vw;
+  // padding: 60px 0 0 0;
   width: 80vw;
   display: flex;
   flex-direction: column;
@@ -13,7 +13,7 @@
 
   border-radius: 20px;
   line-height: 1.5;
-  height: 80vh;
+  height: fit-content;
   // background-color: var(--mainDark);
   box-sizing: border-box;
   #loginWrapper {
@@ -75,7 +75,7 @@
     }
   }
   img {
-    width: 20vw;
+    width: 16vw;
     border-radius: 10px;
   }
   #buttons {
